fixed location search on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,7 +555,7 @@ td {
     }
 
     /* Animated Search */
-    .animated-search {
+    .nav-search {
         display: none;
     }
 
